--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="./static/favicon.ico">
-    <title>SEC Wallet</title>
+    <title>BIUT Wallet</title>
+    
   </head>
   <body>
     <div id="app"></div>
