--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+     <meta name="apple-mobile-web-app-capable" content="yes">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+     <meta name="format-detection" content="telephone=no, email=no">
+     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+     <meta http-equiv="Pragma" content="no-cache" />
+     <meta http-equiv="Expires" content="0" />
     <link rel="shortcut icon" href="./static/favicon.ico">
-    <title>BIUT Wallet</title>
-    
+    <title>wallet-pc</title>
   </head>
   <body>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
